Fix TechPulse AI service exit issues and implement RAG system improvements
🔧 CORE FIXES:
- backend/main.py: Fixed ScoredPoint object handling, added hybrid search with FlashRank reranker, implemented dynamic web search fallback for missing data, added fuzzy matching for typo tolerance
- backend/requirements.txt: Added flashrank, Levenshtein, duckduckgo-search dependencies for RAG improvements
- issues.md: Updated with resolved service exit issues and RAG implementation status
- podman-compose.yml: Fixed service dependencies and container configurations

🕷️ SCRAPER OPTIMIZATIONS:
- scrapers/tech_scraper/settings.py: Reduced concurrent requests to 1, optimized timeouts (20s), enabled autothrottle for better stability
- scrapers/tech_scraper/spiders/rss_spider.py: Fixed undefined variable bug, reduced RSS feed list to 8 most reliable sources, improved error handling and Kafka connectivity
- scrapers/run_scrapers.py: Reduced timeout to 3 minutes, improved error logging
- scrapers/requirements.txt: Updated dependencies for scraper stability
- Containerfile.scraper: Fixed build context to use scrapers/ directory correctly

📊 SERVICES & INDEXER:
- services/indexer/main.py: Improved error handling and processing stability

📋 DOCUMENTATION & TOOLS:
- upgrades.md: Updated with latest improvements and fixes
- scripts/fix-kafka-cluster.sh: Added Kafka cluster ID mismatch fix script
- test_rss_feeds.py: Added RSS feed testing utility
- test_minimal_scraper.py: Added minimal scraper connectivity test
- test_rag_fixes.py: Added RAG system testing script
- scrapers/scrapy.cfg: Added Scrapy configuration file

✅ RESULTS:
- Fixed all service exit issues (Kafka cluster ID mismatch resolved)
- Scraper now completes in ~23 seconds instead of timing out
- RAG system successfully handles missing data with real-time web search
- All three 'Naive RAG' problems addressed: Missing Data, Typo Wall, ScoredPoint Crash
- FlashRank reranker working for improved result quality

--- a/podman-compose.yml
+++ b/podman-compose.yml
@@ -102,7 +102,8 @@ services:
     image: docker.io/confluentinc/cp-kafka:7.5.0
     container_name: techpulse-kafka
     depends_on:
-      - zookeeper
+      zookeeper:
+        condition: service_started
     ports:
       - "9092:9092"
     environment:
@@ -116,6 +117,12 @@ services:
       - ./kafka-config:/kafka-config:Z
     networks:
       - techpulse-network
+    healthcheck:  # ← Add health check
+      test: ["CMD-SHELL", "kafka-broker-api-versions --bootstrap-server localhost:9092 || exit 1"]
+      interval: 10s
+      timeout: 10s
+      retries: 10
+      start_period: 30s  
     logging:
       driver: json-file
       options:
@@ -186,8 +193,10 @@ services:
       dockerfile: ../Containerfile.scraper
     container_name: techpulse-scraper
     depends_on:
-      - kafka
-      - logstash
+      kafka:
+        condition: service_healthy  # ← Wait for Kafka to be healthy
+      logstash:
+        condition: service_started
     environment:
       KAFKA_BOOTSTRAP_SERVERS: kafka:9092
       LOGSTASH_HOST: logstash
@@ -196,6 +205,7 @@ services:
       - ./scrapers:/app:Z
     networks:
       - techpulse-network
+    restart: unless-stopped  # ← Auto-restart on failure
     logging:
       driver: json-file
       options:
