--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -30,3 +30,9 @@ kafka-python==2.0.2
 feedparser>=6.0.10
 duckduckgo-search>=4.1.1
 newspaper4k>=0.9.3
+
+# Reranking
+flashrank>=0.2.5
+
+# Additional utilities for fuzzy matching and text processing
+python-Levenshtein==0.25.1
